# file_big_ia

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
src/: main.py  settings.py
src/lib/processor/: __init__.py  events.py  handlers.py  processor.py  prompts.py
src/lib/processor/splitters/: pdf_splitter.py  xlsx_splitter.py
src/tools/: main.py
tests/lib/processor/: test_handlers.py  test_processor.py  test_xlsx_splitter.py
